atualizando index.html

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 </head>
 <body>
     <h1>quero me jogar da ponte mais próxima</h1>
+    <p>ou bater minha cabeça na parede. aceito indicações</p>
 </body>
 </html>
