--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
 <body>
     <h1>quero me jogar da ponte mais próxima</h1>
     <p>ou ficar inconsciente por horas. aceito recomendações</p>
+    <p>tô muito cansada, por favor, andré, libere cedo!!!!!!!!!! *emoji chorando desesperada*</p>
 </body>
 </html>
